added my rides page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<li><a href="item_05.html">Market Bias</a></li>
 							<li><a href="item_06.html">Trend Follower</a></li>
 							<li><a href="item_07.html">Google Scraper</a></li>
-							<li><a href="item_08.html">Millionaires Club</a></li>
+							<li><a href="item_08.html">My Rides</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">Quant Catalog</a></li>
@@ -150,9 +150,9 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="item_08.html">
-										<h2>Millionaires Club</h2>
+										<h2>My Rides</h2>
 										<div class="content">
-											<p>FastAPI application build to display current CPI readings for all countries included in Econdb's macroeconomic database.</p>
+											<p>Dynamic Web Application build with Django and HTMX to ensure rich client-side experience.</p>
 										</div>
 									</a>
 								</article>
