--- a/item_02.html
+++ b/item_02.html
@@ -49,7 +49,7 @@
 							<li><a href="item_05.html">Market Bias</a></li>
 							<li><a href="item_06.html">Trend Follower</a></li>
 							<li><a href="item_07.html">Google Scraper</a></li>
-							<li><a href="item_08.html">Millionaires Club</a></li>
+							<li><a href="item_08.html">My Rides</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">Quant Catalog</a></li>
