fixed links in my rides page

--- a/item_08.html
+++ b/item_08.html
@@ -83,8 +83,8 @@
 										<tr>
 										  <td><a href="https://django-mjcars.herokuapp.com/https://django-mjcars.herokuapp.com/" target="blank" class="live"><img src="images/heroku.png" alt=""></a></td>
 										  <td><a href="https://github.com/mjaroszewski1979/django_car" target="blank" class="live"><img src="images/github.png" alt=""></a></td>
-										  <td><a href="https://djangocarsdocs.netlify.app/" target="blank" class="live"><img src="images/docker_compose.png" alt=""></a></td>
-										  <td><a href="https://github.com/mjaroszewski1979/django_car/blob/main/docker-compose.yml" target="blank" class="live"><img src="images/sphinx.png" alt=""></a></td>
+										  <td><a href="https://github.com/mjaroszewski1979/django_car/blob/main/docker-compose.yml" target="blank" class="live"><img src="images/docker_compose.png" alt=""></a></td>
+										  <td><a href="https://djangocarsdocs.netlify.app/" target="blank" class="live"><img src="images/sphinx.png" alt=""></a></td>
 										</tr>
 									</table>
 								</div>
