--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         My mindset is such that I view every problem as an opportunity to exercise my creativity and problem-solving skills. It doesn't matter whether the task at hand involves designing or coding - I am continuously on the lookout for fresh and innovative approaches to resolving each assignment and delivering the best possible result.
                         <br>
                     </p>
-                    <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+                    <a href="Maciej_Jaroszewski.pdf" download class="live"><button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>              
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
