added global-macro file and live-projects file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </h1>
             <p class="header-subtitle">TECH-SAVVY ENTHUSIAST</p>            
 
-            <button class="btn btn-primary">Visit My Works</button>
+            <a href="live-projects.html"><button class="btn btn-primary">View Live Projects</button></a>
         </div>              
     </header><!-- end of page header -->
 
