--- a/web_development.html
+++ b/web_development.html
@@ -87,7 +87,7 @@
                         <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
                             In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/django_global_macro" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="global-macro.html" class="blog-card-link" target="_blank">Read more<i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
